--- a/src/Form/Form.module.css
+++ b/src/Form/Form.module.css
@@ -6,7 +6,8 @@
   font-size: 40px;
   width: 710px;
   border-radius: 8px;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: bolder;
 }
 @keyframes blink {
   50% {
