--- a/src/Board/Board.css
+++ b/src/Board/Board.css
@@ -51,6 +51,12 @@
   font-size: 150px;
 }
 
+.six {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: bold;
+  font-size: 150px;
+}
+
 /* .font-space-div {
   font-size: 100px;
   margin: 10px;
@@ -70,6 +76,8 @@ h1 {
   gap: 40px;
   position: fixed;
   margin-top: 50px;
+  bottom: 0;
+  margin-bottom: 160px;
 }
 
 button {
@@ -77,11 +85,63 @@ button {
   width: auto;
   height: 80px;
   font-size: 30px;
-  border-radius: 20px;
+  border-radius: 10px;
   padding-left: 20px;
   padding-right: 20px;
   background-color: rgb(255, 254, 250);
+  color: red;
+  border-color: red;
+  border-style: solid;
+  transition: transfrom ease-in-out all 0.3s;
+  transform: scaleX(O);
+  transform-origin: left;
+  cursor: pointer;
+  overflow: hidden;
+  position: relative;
 }
+
+:root {
+  --accent-color: red;
+}
+
+button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+  background-color: var(--accent-color);
+
+  transition: transform 200ms ease-in-out;
+  transform: scaleX(0);
+  transform-origin: right;
+}
+
+button:hover::before {
+  transform: scaleX(1);
+}
+
+button {
+  transition: color 300ms ease-in-out;
+  z-index: 1;
+}
+button:hover {
+  color: white;
+}
+
+/* button:hover::before {
+  transform: scaleX(1);
+} */
+
+/* button:hover {
+  background-color: #f44336;
+  color: white;
+  border-radius: 30px;
+  transform: scale(1.05);
+  z-index: 1;
+} */
 
 .HarmondButton {
   font-family: "Harmond";
@@ -89,7 +149,7 @@ button {
 }
 
 .impactButton {
-  padding-top: 5px;
+  /* padding-top: 5px; */
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 
@@ -100,5 +160,12 @@ button {
 .gillSansButton {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: 100;
-  letter-spacing: 0.1cap;
+  /* letter-spacing: 0.1cap; */
+  white-space: nowrap;
+}
+
+.gillSansBoldButton {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: bold;
+  white-space: nowrap;
 }
